--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/portfolio.css">
 </head>
+
 <body>
-    <header>
-<nav>
-    <h2 class="nav-title">Ma<span class="main-color">r</span>y</h2>
-    <ul>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Blog</a></li>
-        <li><button class="buttonH">Hire Me</button></li>
-    </ul>
-</nav>
+    <header class="header">
+        <nav>
+            <h2 class="nav-title">Ma<span class="main-color">r</span>y</h2>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="buttonH">Hire Me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-items">
+                <h4 class="banner-greet">Hi, I am</h4>
+                <h1 class="banner-name">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                    <button class="buttonH">Download CV</button>
+                    <button  class="buttonH">Contact</button>
+            </div>
+            <img class="profile-pic" src="/images/hardy.png" alt="Hardy">
+        </div>
     </header>
     <main>
+<section class="about">
+    <h3 class="section-title">About Me</h3>
+    <p class="aboutm-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
 
+</section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
