footer first half

--- a/index.html
+++ b/index.html
@@ -142,7 +142,19 @@
 </section>
     </main>
     <footer>
+<div class="footer-item">
+<h3 class="footer-item-heading">Lets Connect</h3>
+<p class="footer-item-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+<div>
+    <a href="" class="social-links"><img src="/images/icons/facebook.png" alt="FB"></a>
+    <a href="" class="social-links"><img src="/images/icons/twitter.png" alt="TW"></a>
+    <a href="" class="social-links"><img src="/images/icons/insta.png" alt="TW"></a>
+</div>
+</div>
+<div class="footer-item">
+<h3 class="footer-item-heading">Let’s Message me</h3>
 
+</div>
     </footer>
 </body>
 
