--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/7cbd2300ef.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -27,10 +28,11 @@
                 <h1 class="banner-name">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
-                    <button class="buttonH">Download CV</button>
-                    <button  class="buttonH">Contact</button>
+                    <button class="buttonH"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button  class="buttonH-1"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="/images/hardy.png" alt="Hardy">
+           
         </div>
     </header>
     <main>
@@ -137,7 +139,7 @@
         </div>
     </div>
     <div class="download-cv">
-        <button class="buttonH">Download CV</button>
+        <button class="buttonH"><i class="fa-solid fa-download"></i> Download CV</button>
     </div>
 </section>
     </main>
@@ -153,7 +155,12 @@
 </div>
 <div class="footer-item">
 <h3 class="footer-item-heading">Let’s Message me</h3>
-
+<form class="contact">
+    <input type="text" name="" id="" placeholder="Your Name">
+    <input type="email" name="" id="" placeholder="Your email">
+    <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
+    <input type="submit" value="Submit">
+</form>
 </div>
     </footer>
 </body>
