--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/portfolio.css">
+    <link rel="stylesheet" href="./styles/portfolio.css">
     <script src="https://kit.fontawesome.com/7cbd2300ef.js" crossorigin="anonymous"></script>
 </head>
 
@@ -31,7 +31,7 @@
                     <button class="buttonH"><i class="fa-solid fa-download"></i> Download CV</button>
                     <button  class="buttonH-1"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
-            <img class="profile-pic" src="/images/hardy.png" alt="Hardy">
+            <img class="profile-pic" src="./images/hardy.png" alt="Hardy">
            
         </div>
     </header>
@@ -65,22 +65,22 @@
 
 <div class="skill-container">
     <div class="skill">
-        <img src="images/icons/js.png" alt="JS">
+        <img src="./images/icons/js.png" alt="JS">
         <h3 class="skill-title">Vanilla JavaScript</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <div class="skill">
-        <img src="/images/icons/react.png" alt="react">
+        <img src="./images/icons/react.png" alt="react">
         <h3 class="skill-title">React</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <div class="skill">
-        <img src="/images/icons/nodejs.png" alt="Node.js">
+        <img src="./images/icons/nodejs.png" alt="Node.js">
         <h3 class="skill-title">Node.js</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <div class="skill">
-        <img src="/images/icons/mongo.png" alt="mongo">
+        <img src="./images/icons/mongo.png" alt="mongo">
         <h3 class="skill-title">MongoDB</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
